--- a/vercel.json
+++ b/vercel.json
@@ -3,3 +3,9 @@
     { "source": "/(.*)", "destination": "api/main.py" }
   ]
 }
+{
+  "version": 2,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/api/main.py" }
+  ]
+}
